<resources>
    <string name="app_name">Radosne Wieczorki</string>
    <string name="app_version">v2.06</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_search">Szukaj</string>
    <string name="menu_name">Wszystkie zabawy</string>
    <string name="title">Tytuł</string>
    <string name="sings">piosenki</string>
    <string name="dances">tańce</string>
    <string name="competition">rywalizacja</string>
    <string name="integration">integracyjne</string>
    <string name="other">inne</string>
    <string name="search">szukaj</string>
    <string name="favorites">ulubione</string>
    <string name="key">wpisz klucz</string>
    <string name="cancel">Anuluj</string>
    <string name="accept">akceptuj</string>
    <string name="request">poproś o klucz</string>
    <string name="findTytle">Szukaj w tytułach</string>
    <string name="findText">Szukaj w opisach</string>
    <string name="write">wpisz tekst do wyszukania</string>
    <string name="noFound">Nie znalezniono wyników pasujących do twojego zapytania</string>
    <string name="home">home</string>
    <string name="back">Wróć</string>
    <string name="tekstSize">Wielkość tekstu</string>
    <string name="mail">300268@pw.edu.pl</string>
    <string name="check">sprawdź</string>
    <string name="send">Wyślij</string>
    <string name="hint">Jeśli nie znasz hasła wpisz swoje imię i nazwisko i wyślij je wraz z twoim Mac adresem, aby otrzymać hasło dla twojej aplikacji</string>
    <string name="favoritesAdd">Dodaj do listy:</string>
    <string name="newFavorites"><u>Utwórz nową listę</u></string>
    <string name="selectFavorite">Lub wybierz istniejącą już listę</string>
    <string name="deleteMode">Usuń wybrany</string>
    <string name="deleteList">Usuń tę listę</string>
    <string name="gameOfTheDay">Zabawa na dziś</string>
    <string name="reportInfo">Wyślij uwagi</string>
    <string name="reportHint">Wpisz wiadomość którą chcesz wysłać</string>
    <string name="message">Wiadomość</string>
    <string name="report">Zgłoszenie</string>
    <string name="edit">Edytuj</string>
    <string name="editNameOfFavorite">Zmień nazwę listy</string>
    <string name="notes">Treść...</string>
    <string name="save">ZAPISZ</string>
    <string name="addGame">Dodaj</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="addTitle">Dodaj zabawę</string>
    <string name="nameHint">Wpisz nazwę</string>
    <string name="textHint">Opis...</string>
    <string name="choseCategory">Wybierz kategorię</string>
    <string name="category1">Tańce</string>
    <string name="category2">Rywalizacja</string>
    <string name="category3">Integracyjne</string>
    <string name="category4">Piosenki</string>
    <string name="category5">Inne</string>
    <string name="shareGame">Podziel się zabawą z innymi</string>
    <string name="az">A...Z</string>
    <string name="perceptivity">Refleks</string>
    <string name="efficiency">Sprawnościowe</string>
    <string name="newList">Nowa lista zabaw</string>
    <string name="create">Utwórz</string>
    <string name="listHint">wprowadz nazwę</string>
    <string name="creationFinished">Lista utworzona</string>
    <string name="backToMainMenu">Przeglądaj zabawy</string>
    <string name="sure">Czy na pewno chcesz usunąć tę pozycję?</string>
    <string name="delete">usuń</string>
    <string name="ok">ok</string>
    <string name="newName">nowa nazwa</string>
    <string name="addGameText">Dodaj zabawę</string>
    <string name="gameIsSend">Zabawa została wysłana</string>
    <string name="thanks">Dziękujemy za Twój wkład w rozwój aplikacji</string>
    <string name="gameSave">Zabawa została zapisana</string>
    <string name="addedGameCommunicate">Możesz teraz dodać ją do swoich ulubionych list.\nMożesz przesłać jej opis do naszej biblioteki, aby po weryfikacji mogli z niej korzystać inni użytkownicy.</string>
    <string name="addNote">Dodaj notatkę</string>
    <string name="ofCourse">Jasne!</string>
    <string name="noThanks">Nie chcę</string>
    <string name="removeGame">Usuń zabawę dodaną przez siebie</string>

</resources>
