<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/addTitle"
        style="@style/TitleTextStyle"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addTitle"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="16dp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/colorPrimary" />

    <EditText
        android:id="@+id/nameOfAddedGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/nameHint" />

    <EditText
        android:id="@+id/textOfAddedGame"
        style="@style/TextStyle"
        android:textCursorDrawable="@color/colorAccent"
        android:minLines="1"
        android:maxLines="5"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/textHint"
        android:autofillHints="auto"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choseCategory"
        android:layout_marginStart="8dp"
        style="@style/TitleTextStyle"/>

    <RadioGroup
        android:id="@+id/categoryGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginStart="8dp"

        >
        <RadioButton
            android:id="@+id/category1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category1"
            android:checked="true"
            android:buttonTint="@color/colorPrimary"/>
        <RadioButton
            android:id="@+id/category2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category2"
            android:buttonTint="@color/colorPrimary"/>
        <RadioButton
            android:id="@+id/category3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category3"
            android:buttonTint="@color/colorPrimary"/>
        <RadioButton
            android:id="@+id/category4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category4"
            android:buttonTint="@color/colorPrimary"/>
        <RadioButton
            android:id="@+id/checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category5"
            android:buttonTint="@color/colorPrimary"/>
        
    </RadioGroup>
    
    <CheckBox
        android:id="@+id/shareGameBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/shareGame"
        android:checked="true"
        android:buttonTint="@color/colorPrimary"/>

</LinearLayout>