<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/favoritesDialogTitle"
        style="@style/DialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="16dp"
        android:text="@string/newList" />

    <EditText
        android:id="@+id/newListName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:hint="@string/listHint"
        android:textAllCaps="false"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        />

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/newGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            style="@style/NormalButton"
            android:layout_marginEnd="15dp"
            />
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/NormalButton"
            android:layout_marginStart="15dp"
            />
    </TableRow>

</LinearLayout>