<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/DialogText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="16dp"
        android:text="@string/gameSave"
        android:layout_gravity="center"
        android:textStyle="bold"/>
    <TextView
        style="@style/DialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/addedGameCommunicate"
        android:layout_gravity="center"
        android:gravity="center"/>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ofCourse"
            style="@style/NormalButton"
            android:layout_marginEnd="15dp"
            android:background="@drawable/blue_line"
            />
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noThanks"
            style="@style/NormalButton"
            android:layout_marginStart="15dp"
            android:background="@drawable/red_line"
            />
    </TableRow>

</LinearLayout>